--- a/frontend/assets/index.html
+++ b/frontend/assets/index.html
@@ -17,10 +17,29 @@
     <main>
         <div id="tableau-container">
             <h2>Interactive Dashboard</h2>
-
-            <div id="tableau-viz">
-                <p>Tableau Dashboard will be embedded here.</p>
+            <!-- Tableau Dashboard Embed Code -->
+            <div class='tableauPlaceholder' id='viz1742953780454' style='position: relative'>
+                <noscript>
+                    <a href='#'>
+                        <img alt='Dashboard 1 ' src='https://public.tableau.com/static/images/28/28X3T77TS/1_rss.png' style='border: none' />
+                    </a>
+                </noscript>
+                <object class='tableauViz' style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                    <param name='embed_code_version' value='3' />
+                    <param name='path' value='shared/28X3T77TS' />
+                    <param name='toolbar' value='yes' />
+                    <param name='static_image' value='https://public.tableau.com/static/images/28/28X3T77TS/1.png' />
+                    <param name='animate_transition' value='yes' />
+                    <param name='display_static_image' value='yes' />
+                    <param name='display_spinner' value='yes' />
+                    <param name='display_overlay' value='yes' />
+                    <param name='display_count' value='yes' />
+                    <param name='language' value='en-US' />
+                    <param name='filter' value='publish=yes' />
+                </object>
             </div>
+
 
             <div id="text-container">
                 <p>etc....</p>
